# gpu-test

./: README.md  pyproject.toml
benchmarks/: benchmark_resnet50.py  benchmark_resnet50_fsdp.py  benchmark_resnet50_maxmem.py
docs/: DDP_vs_FSDP_COMPARISON.md  MAXMEM_SWANLAB_GUIDE.md  MAXMEM_UPDATE.md  NCCL_SHM_DIAGNOSIS.md  PERFORMANCE_SUMMARY.md
scripts/: monitor_gpu.sh  plot_swanlab.py  stress_test_15min.sh  test_8gpu.sh  test_maxmem_swanlab.sh
tests/: test_ddp.py  test_nccl_quick.py
